# github-actions-test

./: CMakeLists.txt  HelloSDL.html  HelloSDL.js  HelloSDL.wasm  HelloWorld.js  HelloWorld.wasm  docker-compose.yml  dockerfile  emscripten_build_win.bat  entrypoint.sh
.github/workflows/: test-action.yml
HelloOpenGL/: HelloOpenGL.html  HelloOpenGL.js  HelloOpenGL.wasm
HelloRaylib/: HelloRaylib.js  HelloRaylib.wasm
HelloSDL/: HelloSDL.js  HelloSDL.wasm
HelloWorld/: CMakeLists.txt  HelloWorld.js  HelloWorld.wasm  main.cpp
projects/HelloOpenGL/: CMakeLists.txt
projects/HelloOpenGL/inc/: Application.h  HelloOpenGLApp.h
projects/HelloOpenGL/src/: Application.cpp  HelloOpenGLApp.cpp  main.cpp
projects/HelloRaylib/: CMakeLists.txt
projects/HelloRaylib/src/: Application.cpp
projects/HelloSDL/: CMakeLists.txt  main.cpp
projects/HelloSDL/src/: Application.cpp
projects/HelloWorld/: CMakeLists.txt
projects/HelloWorld/inc/: Application.h
projects/HelloWorld/src/: Application.cpp  main.cpp
